--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "shelljs": "^0.7.6",
     "tailwindcss": "^0.2.2",
     "url-loader": "^0.5.8",
+    "vue-awesome": "^2.3.4",
     "vue-head": "^2.0.11",
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
